// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableForm /> does not render the shipping address form if countries could not be loaded 1`] = `<DocumentFragment />`;

exports[`<EditableForm /> renders the payments form if countries are loaded 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      >
        Billing Information
      </h2>
      <div
        class="braintree"
      >
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <select
              class="input"
              name="payment_method"
            >
              <option
                value="braintree"
              >
                Credit Card (Braintree)
              </option>
              <option
                value="checkmo"
              >
                Check / Money order
              </option>
            </select>
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <span
              class="root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="address_check"
      >
        <label
          class="root"
        >
          <span
            class="icon"
          >
            <span
              class="root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="20 6 9 17 4 12"
                />
              </svg>
            </span>
          </span>
          <input
            checked=""
            class="input"
            name="addresses_same"
            type="checkbox"
          />
          <span
            class="label"
          >
            Billing address same as shipping address
          </span>
        </label>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        disabled=""
        type="submit"
      >
        <span
          class="content"
        >
          Use Payment Method
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<EditableForm /> renders the payments form if countries are loaded 2`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      >
        Billing Information
      </h2>
      <div
        class="braintree"
      >
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <select
              class="input"
              name="payment_method"
            >
              <option
                value="braintree"
              >
                Credit Card (Braintree)
              </option>
              <option
                value="checkmo"
              >
                Check / Money order
              </option>
            </select>
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <span
              class="root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="address_check"
      >
        <label
          class="root"
        >
          <span
            class="icon"
          >
            <span
              class="root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="20 6 9 17 4 12"
                />
              </svg>
            </span>
          </span>
          <input
            checked=""
            class="input"
            name="addresses_same"
            type="checkbox"
          />
          <span
            class="label"
          >
            Billing address same as shipping address
          </span>
        </label>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        disabled=""
        type="submit"
      >
        <span
          class="content"
        >
          Use Payment Method
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<EditableForm /> renders the shipping method form if countries are loaded 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      >
        Shipping Information
      </h2>
      <div
        class="shippingMethod"
        id="shippingMethod"
      >
        <label
          for="shippingMethod"
        >
          Shipping Method
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <select
              class="input"
              name="shippingMethod"
            >
              <option
                value="flatrate"
              >
                Flat Rate
              </option>
            </select>
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <span
              class="root"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="6 9 12 15 18 9"
                />
              </svg>
            </span>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        >
          Use Method
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<EditableForm /> submits the Address form 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <div
      class="body"
    >
      <h2
        class="heading"
      >
        Shipping Address
      </h2>
      <div
        class="firstname"
      >
        <div
          class="root"
        >
          <label
            for="firstname"
          >
            <span
              class="label"
            >
              First Name
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="firstname"
                name="firstname"
                value="Veronica"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="lastname"
      >
        <div
          class="root"
        >
          <label
            for="lastname"
          >
            <span
              class="label"
            >
              Last Name
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="lastname"
                name="lastname"
                value="Costello"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="email"
      >
        <div
          class="root"
        >
          <label
            for="email"
          >
            <span
              class="label"
            >
              E-Mail
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="email"
                name="email"
                value="veronica@example.com"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="street0"
      >
        <div
          class="root"
        >
          <label
            for="street0"
          >
            <span
              class="label"
            >
              Street
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="street0"
                name="street0"
                value="cart shipping address"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="city"
      >
        <div
          class="root"
        >
          <label
            for="city"
          >
            <span
              class="label"
            >
              City
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="city"
                name="city"
                value="Calder"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="country"
      >
        <div
          class="root"
        >
          <label
            for="country"
          >
            <span
              class="label"
            >
              Country
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 1;"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="country"
                name="country_code"
              >
                <option
                  value="RO"
                >
                  Romania
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="region_code"
      >
        <div
          class="root"
        >
          <label
            for="region_code"
          >
            <span
              class="label"
            >
              State
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 1;"
          >
            <span
              class="input"
            >
              <select
                class="input"
                id="region_code"
                name="region_code"
              >
                <option
                  value=""
                />
                <option
                  value="AL"
                >
                  Alabama
                </option>
                <option
                  value="AK"
                >
                  Alaska
                </option>
              </select>
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            >
              <span
                class="root"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </span>
            </span>
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="postcode"
      >
        <div
          class="root"
        >
          <label
            for="postcode"
          >
            <span
              class="label"
            >
              ZIP
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="postcode"
                name="postcode"
                value="49628-7978"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="telephone"
      >
        <div
          class="root"
        >
          <label
            for="telephone"
          >
            <span
              class="label"
            >
              Phone
            </span>
          </label>
          <span
            class="root"
            style="--iconsBefore: 0; --iconsAfter: 0;"
          >
            <span
              class="input"
            >
              <input
                class="input"
                id="telephone"
                name="telephone"
                value="(555) 229-3326"
              />
            </span>
            <span
              class="before"
            />
            <span
              class="after"
            />
          </span>
          <p
            class="root"
          />
        </div>
      </div>
      <div
        class="validation"
      />
      <div
        class="error"
      />
    </div>
    <div
      class="footer"
    >
      <button
        class="root_normalPriority"
        type="button"
      >
        <span
          class="content"
        >
          Cancel
        </span>
      </button>
      <button
        class="root_highPriority"
        disabled=""
        type="submit"
      >
        <span
          class="content"
        >
          Use Address
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
